[gd_scene load_steps=2 format=3 uid="uid://c8t0iaaiqq0t"]

[ext_resource type="Script" uid="uid://dlqtov76isw8s" path="res://options2.gd" id="1_csufv"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -241.5
offset_top = -132.5
offset_right = 241.5
offset_bottom = 132.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_csufv")

[node name="TabContainer" type="TabContainer" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -123.0
offset_right = 217.0
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
clip_tabs = false

[node name="Video" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="TabContainer/Video"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="GridContainer" parent="TabContainer/Video/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -43.0
offset_right = 166.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 42
columns = 2

[node name="Label" type="Label" parent="TabContainer/Video/Panel/VBoxContainer"]
layout_mode = 2
text = "Renderer method:"

[node name="Rmethod" type="OptionButton" parent="TabContainer/Video/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
item_count = 3
selected = 0
popup/item_0/text = "forward_plus"
popup/item_0/id = 0
popup/item_1/text = "mobile"
popup/item_1/id = 1
popup/item_2/text = "gl_compatibility"
popup/item_2/id = 2

[node name="Label2" type="Label" parent="TabContainer/Video/Panel/VBoxContainer"]
layout_mode = 2
text = "Fps:"

[node name="fps" type="OptionButton" parent="TabContainer/Video/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
item_count = 8
selected = 6
popup/item_0/text = "20Hz"
popup/item_0/id = 20
popup/item_1/text = "30Hz"
popup/item_1/id = 30
popup/item_2/text = "45HZ"
popup/item_2/id = 45
popup/item_3/text = "60Hz"
popup/item_3/id = 60
popup/item_4/text = "75Hz"
popup/item_4/id = 75
popup/item_5/text = "90Hz"
popup/item_5/id = 90
popup/item_6/text = "120Hz"
popup/item_6/id = 120
popup/item_7/text = "Unlimited"
popup/item_7/id = 0

[node name="Label3" type="Label" parent="TabContainer/Video/Panel/VBoxContainer"]
layout_mode = 2
text = "FOV:"

[node name="fov" type="HSlider" parent="TabContainer/Video/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="TabContainer/Video/Panel/VBoxContainer/fov"]
layout_mode = 0
offset_left = 109.0
offset_top = -4.0
offset_right = 142.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 15
text = "677"

[node name="Controls" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="Panel" type="Panel" parent="TabContainer/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="GridContainer" parent="TabContainer/Controls/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -43.0
offset_right = 34.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 25
columns = 2

[node name="Label" type="Label" parent="TabContainer/Controls/Panel/VBoxContainer"]
layout_mode = 2
text = " Mouse Sensitivity"

[node name="ms" type="HSlider" parent="TabContainer/Controls/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label3" type="Label" parent="TabContainer/Controls/Panel/VBoxContainer/ms"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -13.0
offset_right = 30.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "0"

[node name="Label2" type="Label" parent="TabContainer/Controls/Panel/VBoxContainer"]
layout_mode = 2
text = "Joystick Sensitivity"

[node name="js" type="HSlider" parent="TabContainer/Controls/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label4" type="Label" parent="TabContainer/Controls/Panel/VBoxContainer/js"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -13.0
offset_right = 200.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "0"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 160.0
offset_top = -127.0
offset_right = 210.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
text = "BACK"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 129.0
offset_right = 45.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
text = "Apply and Save"

[connection signal="item_selected" from="TabContainer/Video/Panel/VBoxContainer/Rmethod" to="." method="_on_rmethod_item_selected"]
[connection signal="item_selected" from="TabContainer/Video/Panel/VBoxContainer/fps" to="." method="_on_fps_item_selected"]
[connection signal="drag_ended" from="TabContainer/Video/Panel/VBoxContainer/fov" to="." method="_on_fov_drag_ended"]
[connection signal="drag_ended" from="TabContainer/Controls/Panel/VBoxContainer/ms" to="." method="_on_ms_drag_ended"]
[connection signal="drag_ended" from="TabContainer/Controls/Panel/VBoxContainer/js" to="." method="_on_js_drag_ended"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
